Add class ItemGravitationArmor Add class ItemUltimateLapPack Add class ArmorRecipe

--- a/src/main/resources/assets/gravitational_armor/lang/zh_cn.lang
+++ b/src/main/resources/assets/gravitational_armor/lang/zh_cn.lang
@@ -1,2 +1,6 @@
 item.superconductorCover.name=超导线缆外层
 item.superconductor.name=超导线缆
+item.coolingCore.name=冷却核心
+item.gravitationEngine.name=重力引擎
+item.ultimateLapPack.name=终极兰波顿电力背包
+item.gravitationArmor.name=重力胸甲
