--- a/src/main/resources/assets/gravitational_armor/lang/en_us.lang
+++ b/src/main/resources/assets/gravitational_armor/lang/en_us.lang
@@ -1,2 +1,6 @@
 item.superconductorCover.name=Superconductor Cover
 item.superconductor.name=Superconductor
+item.coolingCore.name=Cooling Core
+item.gravitationEngine.name=Gravitation Engine
+item.ultimateLapPack.name=Ultimate Lappack
+item.gravitationArmor.name=Gravitation Armor
